--- a/StudentsManagement/StudentsManagement/StudentsManagement.csproj
+++ b/StudentsManagement/StudentsManagement/StudentsManagement.csproj
@@ -193,6 +193,7 @@
     <Content Include="Scripts\respond.min.js" />
     <Content Include="UI\js\Service.js" />
     <Content Include="UI\js\Student.js" />
+    <Content Include="UI\js\StudentAdd.js" />
     <Content Include="UI\js\StudentService.js" />
     <Content Include="UI\Student.html" />
     <Content Include="UI\StudentAdd.html" />
