--- a/StudentsManagement/StudentsManagement/StudentsManagement.csproj
+++ b/StudentsManagement/StudentsManagement/StudentsManagement.csproj
@@ -161,7 +161,7 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
-    <Compile Include="Helpers\MyStreamProvider.cs" />
+    <Compile Include="Helpers\StreamProvider.cs" />
     <Compile Include="Models\Student.cs" />
     <Compile Include="Models\StudentToSubject.cs" />
     <Compile Include="Models\Subject.cs" />
