--- a/StudentsManagement/StudentsManagement/StudentsManagement.csproj
+++ b/StudentsManagement/StudentsManagement/StudentsManagement.csproj
@@ -147,6 +147,7 @@
     <Compile Include="Areas\HelpPage\XmlDocumentationProvider.cs" />
     <Compile Include="College\CollegeRules.cs" />
     <Compile Include="College\StudentBugetStatus.cs" />
+    <Compile Include="College\StudentCollegeDetails.cs" />
     <Compile Include="College\StudentPromotionDetails.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\StudentController.cs" />
@@ -161,6 +162,7 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Models\DetailsQuery.cs" />
     <Compile Include="Models\Student.cs" />
     <Compile Include="Models\StudentToSubject.cs" />
     <Compile Include="Models\Subject.cs" />
@@ -206,6 +208,7 @@
     <Content Include="UI\js\Service.js" />
     <Content Include="UI\js\Student.js" />
     <Content Include="UI\js\StudentAdd.js" />
+    <Content Include="UI\js\StudentDetails.js" />
     <Content Include="UI\js\StudentService.js" />
     <Content Include="UI\js\Subject.js" />
     <Content Include="UI\js\SubjectAdd.js" />
