--- a/StudentsManagement/StudentsManagement.Tests/StudentsManagement.Tests.csproj
+++ b/StudentsManagement/StudentsManagement.Tests/StudentsManagement.Tests.csproj
@@ -91,6 +91,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CollegeRulesTests\CollegeRulesTests.cs" />
     <Compile Include="Controllers\StudentControllerTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Controllers\HomeControllerTest.cs" />
