--- a/StudentsManagement/StudentsManagement.Tests/StudentsManagement.Tests.csproj
+++ b/StudentsManagement/StudentsManagement.Tests/StudentsManagement.Tests.csproj
@@ -112,7 +112,10 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="App_Start\UnityConfig.cs" />
+    <Compile Include="CollegeRulesTests\CollegeRulesTests.cs" />
     <Compile Include="Controllers\StudentControllerTest.cs" />
+    <Compile Include="Controllers\SubjectControllerTest.cs" />
+    <Compile Include="FakeModels\Fakes.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Controllers\HomeControllerTest.cs" />
   </ItemGroup>
@@ -128,9 +131,7 @@
       <Name>StudentsManagement</Name>
     </ProjectReference>
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="FakeModels\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it.
        Other similar extension points exist, see Microsoft.Common.targets.
