--- a/StudentsManagement/StudentsManagement.Tests/StudentsManagement.Tests.csproj
+++ b/StudentsManagement/StudentsManagement.Tests/StudentsManagement.Tests.csproj
@@ -114,6 +114,9 @@
     <Compile Include="CollegeRulesTests\CollegeRulesTests.cs" />
     <Compile Include="App_Start\UnityConfig.cs" />
     <Compile Include="Controllers\StudentControllerTest.cs" />
+    <Compile Include="DataLayer\DataLayerTest.cs" />
+    <Compile Include="DataLayer\FakeDataService.cs" />
+    <Compile Include="DataLayer\FakeModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Controllers\HomeControllerTest.cs" />
   </ItemGroup>
